# crewAI-examples

marketing_strategy/: pyproject.toml
write_a_book_with_flows/: pyproject.toml
write_a_book_with_flows/src/write_a_book_with_flows/: main.py
